--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,7 +19,7 @@ Detailed changes:
 [core] ADDED: GetWindowScaleDPI()
 [core] ADDED: GetMonitorRefreshRate() (#1289) by @Shylie
 [core] ADDED: IsCursorOnScreen() (#1262) by @ChrisDill
-[core] ADDED: SetMouseCursor() and GetMouseCursor() for standard Desktop mouse cursors (#1407) by @chances
+[core] ADDED: SetMouseCursor() and GetMouseCursor() for standard Desktop cursors (#1407) by @chances
 [core] REMOVED: struct RenderTexture2D: depthTexture variable 
 [core] RENAMED: GetExtension() to GetFileExtension()
 [core] REVIEWED: Several structs to reduce size and padding
@@ -28,7 +28,7 @@ Detailed changes:
 [core] REVIEWED: InitWindow(), support empty title for window (#1323)
 [core] REVIEWED: RPI: Mouse movements are bound to the screen resolution (#1392) (#1410) by @kernelkinetic
 [core] REVIEWED: GetPrevDirectoryPath() fixes on Unix-like systems (#1246) by @ivan-cx
-[core] REDESIGNED: GetMouseWheelMove(): Return float movement for precise scrolling where possible (#1397) by @Doy-lee 
+[core] REDESIGNED: GetMouseWheelMove() to return float movement for precise scrolling (#1397) by @Doy-lee 
 [core] UWP rework with improvements (#1231) by @Rover656
 [core] Gamepad axis bug fixes and improvement (#1228) by @mmalecot
 [core] Updated joystick mappings with latest version of gamecontrollerdb (#1381) by @coderoth
@@ -143,7 +143,7 @@ Detailed changes:
 [build] Updated Makefile for web (#1332) by @rfaile313
 [build] Updated build pipelines to use latest emscripten and android ndk
 [build] Updated emscriptem build script to generate .a on WebAssembly
-[build] Fixed Android build for Linux, supporting ANDROID_NDK to be modified at compile time by @branlix3000
+[build] Updated Android build for Linux, supporting ANDROID_NDK at compile time by @branlix3000
 [build] Updated VSCode project template tasks
 [build] Updated VS2017.UWP project template by @Rover656
 [build] Updated Android build pipeline 
