--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,12 +7,12 @@ Current Release:    raylib 3.0.0 (01 April 2020)
 Release:     raylib 3.5 - 7th Anniversary Edition (November 2020) -WIP-
 -------------------------------------------------------------------------
 KEY CHANGES:
- - [core] NEW platform supported: PLATFORM_DRM (#1388) by @kernelkinetic
- - [rlgl] ADDED RenderBatch type and related functions to allow custom batching
- - [rlgl] REDESIGN framebuffers API to support multiple attachment types (#721) 
- - [textures] REDESIGNED Image*() functions, big performance improvements (software rendering)
- - [*] REVIEWED multiple functions to replace file accesses by memory accesses
- - [*] NEW GitHub Actions CI to support multiple raylib build configurations
+ - [core] ADDED: PLATFORM_DRM to support RPI4 and other devices (#1388) by @kernelkinetic
+ - [rlgl] ADDED: RenderBatch type and related functions to allow custom batching
+ - [rlgl] REDESIGNED: Framebuffers API to support multiple attachment types (#721) 
+ - [textures] REDESIGNED: Image*() functions, big performance improvements (software rendering)
+ - [*] REVIEWED: multiple functions to replace file accesses by memory accesses
+ - [*] ADDED: GitHub Actions CI to support multiple raylib build configurations
  
 Detailed changes:
 [core] ADDED: IsWindowFocused()
@@ -28,7 +28,8 @@ Detailed changes:
 [core] REVIEWED: InitWindow(), support empty title for window (#1323)
 [core] REVIEWED: RPI: Mouse movements are bound to the screen resolution (#1392) (#1410) by @kernelkinetic
 [core] REVIEWED: GetPrevDirectoryPath() fixes on Unix-like systems (#1246) by @ivan-cx
-[core] REDESIGNED: GetMouseWheelMove() to return float movement for precise scrolling (#1397) by @Doy-lee 
+[core] REPLACED: rgif.h by msf_gif.h for automatic gif recording
+[core] REDESIGNED: GetMouseWheelMove() to return float movement for precise scrolling (#1397) by @Doy-lee
 [core] UWP rework with improvements (#1231) by @Rover656
 [core] Gamepad axis bug fixes and improvement (#1228) by @mmalecot
 [core] Updated joystick mappings with latest version of gamecontrollerdb (#1381) by @coderoth
@@ -42,6 +43,7 @@ Detailed changes:
 [rlgl] REVIEWED: rlFramebufferAttach() to support texture layers
 [rlgl] REVIEWED: GenDrawCube() and GenDrawQuad()
 [rlgl] REVIEWED: Issues with vertex batch overflow (#1223)
+[rlgl] REVIEWED: rlUpdateTexture(), issue with offsets
 [rlgl] REDESIGNED: GenTexture*() to use the new fbo API (#721)
 [raymath] ADDED: Normalize() and Remap() functions (#1247) by @NoorWachid
 [raymath] ADDED: Vector2Reflect() (#1400) by @daniel-junior-dube
@@ -120,6 +122,7 @@ Detailed changes:
 [models] REDESIGNED: LoadIQM() and LoadModelAnimations() to use memory buffers
 [audio] ADDED: LoadWaveFromMemory() (#1327)
 [audio] REMOVED: SetMusicLoopCount()
+[audio] REVIEWED: Several functions, sampleCount vs frameCount (#1423)
 [audio] REVIEWED: SaveWAV() to use memory write insted of file
 [audio] REVIEWED: LoadMusicStream(), support WAV music streaming (#1198) 
 [audio] REVIEWED: Support multiple WAV sampleSize for MusicStream (#1340) 
