--- a/CHANGELOG
+++ b/CHANGELOG
@@ -136,6 +136,7 @@ Detailed changes:
 [utils] REVIEWED: android_fopen() to support SDCard access
 [utils] REDESIGNED: SaveFile*() functions to expose file access results (#1420)
 [rmem] REVIEWED: MemPool and other allocators optimization (#1211) by @assyrianic
+[examples] ADDED: core/core_window_flags
 [examples] ADDED: core/core_quat_conversion by @chriscamacho and @codifies
 [examples] ADDED: textures/textures_blend_modes (#1261) by @accidentalrebel
 [examples] ADDED: textures/textures_draw_tiled (#1291) by @Demizdor
