--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,7 @@ Release:     raylib 3.5 - 7th Anniversary Edition (25 December 2020)
 -------------------------------------------------------------------------
 KEY CHANGES:
  - [core] ADDED: PLATFORM_DRM to support RPI4 and other devices (#1388) by @kernelkinetic
+ - [core] REDESIGNED: Window states management system through FLAGS
  - [rlgl] ADDED: RenderBatch type and related functions to allow custom batching (internal only)
  - [rlgl] REDESIGNED: Framebuffers API to support multiple attachment types (#721) 
  - [textures] REDESIGNED: Image*() functions, big performance improvements (software rendering)
@@ -32,7 +33,6 @@ Detailed changes:
 [core] REVIEWED: RPI: Mouse movements are bound to the screen resolution (#1392) (#1410) by @kernelkinetic
 [core] REVIEWED: GetPrevDirectoryPath() fixes on Unix-like systems (#1246) by @ivan-cx
 [core] REPLACED: rgif.h by msf_gif.h for automatic gif recording
-[core] REDESIGNED: Window states management system
 [core] REDESIGNED: GetMouseWheelMove() to return float movement for precise scrolling (#1397) by @Doy-lee
 [core] REDESIGNED: GetKeyPressed(), and added GetCharPressed() (#1336) 
 [core] UWP rework with improvements (#1231) by @Rover656
@@ -69,7 +69,7 @@ Detailed changes:
 [text] REVIEWED: TextReplace() (#1172)
 [text] REVIEWED: LoadBMFont() to load data from memory (#1232)
 [text] REVIEWED: GenImageFontAtlas(), fixed offset (#1171) 
-[text] REDESIGNED: LoadFontData()
+[text] REDESIGNED: LoadFontData(), reviewed input parameters
 [text] REDESIGNED: LoadFontDefault(), some code simplifications
 [text] REDESIGNED: LoadFontFromImage(), avoid LoadImageEx()
 [text] REDESIGNED: LoadFontData(), avoid GenImageColor(), ImageFormat()
